@@ -1,3 +1,10 @@
+2002-09-24  Jim Blandy  <jimb@redhat.com>
+
+	* dbxread.c, mdebugread.c: Revert my change of 2001-10-23.  Moving
+	texthigh and textlow to reader-specific structs caused
+	objfile_relocate to miss them.  This is fixable, but the work that
+	the change was supposed to prepare GDB for never got done anyway.
+
 2002-09-18  Andrew Cagney  <ac131313@redhat.com>
 
 	* ada-lang.c, ada-tasks.c, ada-valprint.c: Import from mainline.
